--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,128 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  /* background-color: rebeccapurple; */
+
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+  background-image: linear-gradient(to right, #6489b5, #244590);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* overflow: hidden; */
+
+  background-attachment: fixed;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  margin: 0 auto;
+
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  margin-bottom: 4rem;
+  font-size: 5rem;
+}
+
+.score-line {
+  margin-bottom: 3rem;
+  font-size: 2rem;
+}
+
+.discs-container {
+  /* background-color: #fff; */
+  display: flex;
+  flex-flow: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  max-height: 12rem;
+  /* overflow: visible; */
+}
+
+.disc {
+  flex: 1;
+  height: 10rem;
+  width: 10rem;
+  border-radius: 50%;
+  background-color: #fff;
+  margin: 1rem 1.5rem;
+  border: 1px solid black;
+  cursor: pointer;
+
+  /* Circles are not clickable before game */
+  pointer-events: none;
+}
+
+.overlay {
+  background-color: #fff;
+  /* display: none; */
+  visibility: hidden;
+  /* visibility: visible; */
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.8;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background-color: #fff;
+  padding: 2rem;
+  width: 40%;
+  height: 25%;
+  border-radius: 10px;
+  position: relative;
+}
+
+.modal button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+}
+
+.buttons {
+  margin-top: 2rem;
+}
+
+.btn {
+  margin: 0 1rem;
+  padding: 0.5rem 1.25rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.disc.active {
+  background-color: goldenrod;
+}
+
+/* End game button is not vsible before game starts and during game start button is not visible */
+.stop {
+  display: none;
 }
